# sql_optimizer

./: CMakeLists.txt  README.md  SQL Unnesting.pptx
GuidedResearch/: Project Notes.xlsx  ~$Project Notes.xlsx
GuidedResearch/optimizer_test_cases/: input.txt  output.txt
benchmarks/: duckDB.csv  mysql.csv  postgresql.csv  postgresql_multithread.csv  postgresql_multithread2.csv  results.xlsx  results2.xlsx  runtimes.csv  runtimes.xlsx  runtimes_umbra.csv  sqlite.csv  throughput.csv
benchmarks/Rscripts/: improvement_decoupled.R  improvement_exists_in.R  improvement_not_decoupled.R  postgresql_multithread.R  runtimes.R  runtimes_17_20.R  runtimes_optimized_17_20.R
benchmarks/data loading/: duckDB_tpch.sql  mysql_tpch.sql  sqlite3_tpch.sql
benchmarks/queries/original/tpchExtended/: tpchExtended1_001.sql  tpchExtended1_1.sql  tpchExtended1_10.sql
benchmarks/query_throughput/: duckDB.csv  mysql.csv  postgresql.csv  sqlite.csv
optimizer/: optimizeSQL.cc
queries/optimized/tpch/decoupled/: tpch1.sql  tpch14.sql  tpch20.sql  tpch4.sql  tpch5.sql  tpch6.sql  tpch7.sql
queries/original/tpch/: tpch10.sql  tpch18.sql  tpch21.sql  tpch3.sql
queries/original/tpchExtended/: tpchExtended1_01.sql
src/optimizer/: deparse_ra_to_sql.cc  deparse_ra_to_sql.h  parse_sql_to_ra.cc  parse_sql_to_ra.h  ra_tree.cc  ra_tree.h  relational_algebra.cc  relational_algebra.h
thomas/: a.out  deparse  deparse.cc  relational_algebra.cpp  relational_algebra.h
thomas/deparse.dSYM/Contents/: Info.plist
visualizations/: duckDB.R  ggplot.R  mysql.R  postgresql.R  sqlite.R
(+31 files in other folders)
